--- a/templates/games.html.twig
+++ b/templates/games.html.twig
@@ -11,10 +11,14 @@
     <p>
         The following games are available:<ul>
             <li>
+                <a href="{{ path('pig_start') }}">Pig Game</a> - A classic dice game
+            </li>
+            <li>
                 <a href="{{ path('card_start') }}">Card Game</a> - just to deal cards
             </li>
             <li>
-                <a href="{{ path('game_start') }}">21 Game</a> - a classic card game
+                <a href="{{ path('game21_home') }}">21 Game</a> - a classic card
+                game
             </li>
         </ul>
     </p>
