--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -42,6 +42,7 @@
                             <div class="dropdown-content">
                                 <a href="{{ path('pig_start') }}">Pig</a>
                                 <a href="{{ path('card_start') }}">Card Game</a>
+                                <a href="{{ path('game21_home') }}">21 Game</a>
                             </div>
                         </div>
                     </li>
