--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -436,7 +436,8 @@ footer {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 70vh;
+    height: 65vh;
+    overflow: hidden; /* Hide any overflowing content */
 }
 
 .frame {
@@ -604,4 +605,15 @@ footer {
     display: flex;
     flex-wrap: wrap;
     gap: 5px;
+}
+
+.results {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    font-size: 24px;
+    font-weight: bold;
+    height: 50px; /* Set a fixed height for the results element */
 }
