--- a/templates/game21/home.html.twig
+++ b/templates/game21/home.html.twig
@@ -10,7 +10,7 @@
     </h1>
 
     <p>
-        Start the Game: <a href="{{ path('game21_play') }}" class="button primary">Play
+        Start the Game: <a href="{{ path('game21_init') }}" class="button primary">Play
             Game</a>
     </p>
 
