--- a/templates/game21/home.html.twig
+++ b/templates/game21/home.html.twig
@@ -10,6 +10,10 @@
     </h1>
 
     <p>
+        <a href="{{ path('game21_doc') }}" class="">See Documentation</a>
+    </p>
+
+    <p>
         Start the Game: <a href="{{ path('game21_init') }}" class="button primary">Play
             Game</a>
     </p>
