kmom03 * added report text

--- a/templates/report.html.twig
+++ b/templates/report.html.twig
@@ -165,7 +165,69 @@
             Kmom03
         </h2>
         <p>
-            text here
+            <ul>
+                <li>
+                    <p>
+                        Berätta hur det kändes att modellera ett kortspel med
+                        flödesdiagram och psuedokod. Var det något som du tror
+                        stödjer dig i din problemlösning och tankearbete för att
+                        strukturera koden kring en applikation?
+                    </p>
+                    <ul>
+                        <li>
+                            Det kändes svårt i allmänhet. Även om jag använde
+                            flödesdiagram och psuedokod, var det svårt att se
+                            hur det skulle implementeras i praktiken.
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <p>
+                        Berätta om din implementation från uppgiften. Hur löste
+                        du uppgiften, är du nöjd/missnöjd, vilken
+                        förbättringspotential ser du i din koden, dina klasser
+                        och applikationen som helhet?
+                    </p>
+                    <ul>
+                        <li>
+                            Jag är relativt nöjd med mitt arbete. Dock hade jag
+                            en tanke om att implementera Split och Double
+                            funktioner, vilket jag råkade avsätta onödigt lång
+                            tid till. Det bidrog till att jag först nu försöker
+                            få klart denna kurs, eftersom jag såg det som
+                            omöjligt att slutföra uppgiften.
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <p>
+                        Vilken är din känsla för att koda i ett ramverk som
+                        Symfony, så här långt in i kursen?
+                    </p>
+                    <ul>
+                        <li>
+                            Jag tycker inte att ramverket är särskilt tydligt.
+                            Personligen föredrar jag Node.js med något smidigt
+                            ramverk. Jag tror det kan bero mer på PHP och
+                            filstrukturen för hela setupen. Setup var
+                            omständigt. Att flytta mellan maskiner är
+                            omständigt. Det är omständigt att sätta sig in i
+                            mängden av folders o filer i detta projekt.
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <p>
+                        Vilken är din TIL för detta kmom?
+                    </p>
+                    <ul>
+                        <li>
+                            Jag lärde mig mer om PHP, klasser, routes, och jobba
+                            med Symfony.
+                        </li>
+                    </ul>
+                </li>
+            </ul>
         </p>
     </article>
 
