kmom04 * added kmom04 report text

--- a/templates/report.html.twig
+++ b/templates/report.html.twig
@@ -236,7 +236,98 @@
             Kmom04
         </h2>
         <p>
-            text here
+            <ul>
+                <li>
+                    <p>
+                        Berätta hur du upplevde att skriva kod som testar annan
+                        kod med PHPUnit och hur du upplever phpunit rent
+                        allmänt.
+                    </p>
+                    <ul>
+                        <li>
+                            PHPUnit känns relativt smidigt när det väl funkar.
+                            Det var rätt krångligt för setup iomed php xdebug.
+                            Det funkade också pga samma anledning olika på olika
+                            operativsystem. Men när det väl fungerade så gjorde
+                            det jobbet helt okej. Jag tror en till anledning
+                            till min skeptiska inställning är Composer. Dessutom
+                            har vi ju NPM samtidigt som Composer i detta
+                            projekt. Många dependencies som ska lira
+                            tillsammans.
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <p>
+                        Hur väl lyckades du med kodtäckningen av din kod,
+                        lyckades du nå mer än 90% kodtäckning?
+                    </p>
+                    <ul>
+                        <li>
+                            Jag lyckades nå 100% kodtäckning. Det kanske inte
+                            var supernödvändigt med så högt men till exempel om
+                            jag hade skippat att testa shuffle, skulle det bara
+                            visat runt 50% kodtäckning av den klassen, vilket
+                            var under kravet för uppgiften.
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <p>
+                        Upplever du din egen kod som &quot;testbar kod&quot;
+                        eller finns det delar i koden som är mer eller mindre
+                        testbar och finns det saker som kan göras för att
+                        förbättra kodens testbarhet?
+                    </p>
+                    <ul>
+                        <li>
+                            Det är mestadels testbar kod. Det som jag skulle
+                            säga är svårtestad kod är Controller:na. Jag vet
+                            inte om det finns jättemycket att göra för att utöka
+                            testbarheten. Kanske dela upp i fler helper
+                            funktioner. Göra det mer DRY.
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <p>
+                        Valde du att skriva om delar av din kod för att
+                        förbättra den eller göra den mer testbar, om så berätta
+                        lite hur du tänkte.
+                    </p>
+                    <ul>
+                        <li>
+                            Jag trodde att man behövde göra phpdoc OCH phpunit?
+                            Kanske missförstog uppgiften. Jag skrev några
+                            DocBlocks för Card klassen.
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <p>
+                        Fundera över om du anser att testbar kod är något som
+                        kan identifiera &quot;snygg och ren kod&quot;.
+                    </p>
+                    <ul>
+                        <li>
+                            Jag skulle säga att de går hand i hand. Mer DRY och
+                            &quot;snygg&quot; kod är oftast lättare att testa.
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <p>
+                        Vilken är din TIL för detta kmom?
+                    </p>
+                    <ul>
+                        <li>
+                            Jag har lärt mig mer om PHPUnit, Composer, NPM,
+                            phpdoc och om hur hemskt det kan vara att arbeta med
+                            ett PHP ramverk.
+                        </li>
+                    </ul>
+                </li>
+            </ul>
         </p>
     </article>
 
