--- a/templates/games.html.twig
+++ b/templates/games.html.twig
@@ -6,7 +6,7 @@
 
 {% block content %}
     <h1>
-        About API
+        Games
     </h1>
     <p>
         The following games are available:<ul>
