--- a/templates/book/create.html.twig
+++ b/templates/book/create.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    Hello BookController!
+    Create Book
 {% endblock %}
 
 {% block content %}
@@ -13,7 +13,7 @@
 
     <div class="example-wrapper">
         <h1>
-            Hello
+            Create New Book
         </h1>
 
         {{ form_start(form) }}
@@ -21,4 +21,13 @@
         <button type="submit">Save Book</button>
         {{ form_end(form) }}
     </div>
+{% endblock %}
+
+{% block sidebar %}
+    <aside id="sidebar">
+        <h1>
+            Links
+        </h1>
+        <a href="{{ path('library_show') }}">Go back to Library</a>
+    </aside>
 {% endblock %}
